<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hope.bakingapp.ui.RecipeStepFragment"
    tools:showIn="@layout/activity_recipe_step">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_step_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</ScrollView>
