<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hope.bakingapp.ui.RecipeDetailsFragment"
    tools:showIn="@layout/activity_recipe_details">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipe_details_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
